--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
     <main>
       <!-- Loads the specified .html file -->
+      <load src="./partials/modal.html" />
       <load src="./partials/hero.html" />
       <load src="./partials/yoga-classes.html" />
       <load src="./partials/team.html" />
