--- a/src/index.html
+++ b/src/index.html
@@ -38,5 +38,6 @@
     <load src="./partials/footer.html" />
 
     <script type="module" src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
